Finish upload code.

--- a/config.yaml
+++ b/config.yaml
@@ -3,48 +3,49 @@
 log_level: debug
 #log_level: info
 
+# Remote buckets to sync to/from
+remotes:
+  - name: minio1
+    endpoint: minio.golder.lan
+    accessKey: blah
+    secretKey: blah
+
 # Outbound means files that arrive locally that are to be sent to S3, with or without
-# pre-processing being applied. 
+# pre-processing being applied.
 outbound:
   - name: KSK1
     description: Kasikorn Main Company Account
     sensitive: false
-    source: "/home/rossg/Downloads/bank-statements/kasikorn-rossgolderltd-*"
-    destination: "s3://bank-statements-602191105086/KSK1/"
-    process_with: somebinary
+    source: "/home/rossg/Downloads/bank-statements-company/kasikorn-rossgolderltd/*"
+    destination: "s3://minio.golder.lan/bank-statements-company/kasikorn-rossgolderltd"
+    process_with: "/home/rossg/obfuscate"
 
   - name: KSK2
     description: Kasikorn Credit Card Account
-    source: "/home/rossg/Downloads/bank-statements/kasikorn-rasamee-*"
-    destination: "s3://bank-statements-602191105086/KSK2"
+    source: "/home/rossg/Downloads/bank-statements-company/kasikorn-rasamee/*"
+    destination: "s3://minio.golder.lan/bank-statements-company/kasikorn-rasamee"
     sensitive: false
 
-  - name: SCB1
-    description: Siam Commercial Electric Bill Account
-    source: "/home/rossg/Downloads/bank-statements/scb-*"
-    destination: "s3://bank-statements-602191105086/SCB1/"
-    sensitive: false
-
-  - name: KTB1
-    description: Krung Thai Main Family Account
-    source: "/home/rossg/Downloads/bank-statements/ktb-*"
-    destination: "s3://bank-statements-602191105086/KTB1/"
+  - name: KSK3
+    description: Kasikorn Main Family Account
+    source: "/home/rossg/Downloads/bank-statements-family/kasikorn-rossigee/*"
+    destination: "s3://minio.golder.lan/bank-statements-family/kasikorn-rossigee"
     sensitive: false
 
 # Inbound means files that should be retrieved from S3 to the local machine when we
 # receive an SQS notification that a new file has been deposited.
 inbound:
-  - name: TEST1
+  - name: INTEST1
     description: Dummy Inbound Workflow
-    source: "s3://bank-statements-602191105086/"
+    source: "s3://minio.golder.lan/bank-statements-763015972118/"
     destination: "/tmp/s3-sync-inbound"
 
-notifications:
-  - name: Discord
-    method: discord
-    url: https://discordapp...
+# notifications:
+#   - name: Discord
+#     method: discord
+#     url: https://discordapp...
     
-  - name: Slack
-    method: slack
-    url: https://slack...
+#   - name: Slack
+#     method: slack
+#     url: https://slack...
     
