Fix linting errors and add comprehensive test suite
- Fix all funlen (function length) linting errors by extracting helper functions
- Add comprehensive test coverage for all modules
- Add CI/CD pipeline with GitHub Actions
- Add linting configuration with golangci-lint
- Add pre-commit hooks for code quality
- Add Docker support for containerized builds
- Add benchmarking tests for performance monitoring
- Update .gitignore to prevent temporary files
- All tests passing, 0 linting issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,67 @@
-build
+# Build outputs
+build/
+dist/
 ./bucketsyncd
+bucketsyncd
+bucketsyncd.exe
+bucketsyncd.app
+
+# Go specific
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+coverage.out
+coverage.html
+
+# Go modules
+go.work
+go.work.sum
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Configuration files with secrets
+config-local.yaml
+.env
+.env.local
+.env.*.local
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# Test files
+testdata/
+*.tmp
+temp_*
+
+# Security
+.secrets.baseline
