--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,3 @@
-version: 2
-
 run:
   timeout: 5m
   issues-exit-code: 1
@@ -7,14 +5,11 @@ run:
   build-tags: []
   skip-dirs:
     - vendor
-  skip-files: []
   modules-download-mode: readonly
   allow-parallel-runners: true
 
 output:
-  formats:
-    colored-line-number:
-      path: stdout
+  format: line-number
   print-issued-lines: true
   print-linter-name: true
   uniq-by-line: true
@@ -31,9 +26,6 @@ linters-settings:
 
   gocyclo:
     min-complexity: 15
-
-  maligned:
-    suggest-new: true
 
   dupl:
     threshold: 100
@@ -137,4 +129,3 @@ issues:
 
   max-issues-per-linter: 0
   max-same-issues: 0
-  new: false
