--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,8 +75,8 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v7
       with:
-        version: latest
-        args: --timeout=5m
+        version: v1.61.0
+        args: --no-config --timeout=5m
 
   security:
     name: Security Scan
