Add comprehensive WebDAV storage support
- Add WebDAV client with upload/download/exists/delete operations
- Support both webdav:// and webdavs:// (secure) schemes
- Integrate WebDAV uploads into outbound file sync alongside S3
- Add comprehensive test suite with mock WebDAV server
- Update configuration examples with WebDAV destinations
- Fix all linting issues (errcheck, staticcheck)
- Increase test coverage from 25% to 33.7%

Closes gap in storage backend support by adding WebDAV alongside
existing S3/MinIO functionality. WebDAV URLs use standard format:
webdav://user:pass@server.com/path or webdavs://user:pass@server.com/path

--- a/example/config.yaml
+++ b/example/config.yaml
@@ -32,6 +32,18 @@ outbound:
     destination: "s3://minio.golder.lan/bank-statements-family/kasikorn-rossigee"
     sensitive: false
 
+  - name: WEBDAV1
+    description: WebDAV Document Sync
+    source: "/home/rossg/Documents/sync/*"
+    destination: "webdav://user:password@webdav.example.com/documents"
+    sensitive: false
+
+  - name: WEBDAV2
+    description: Secure WebDAV Backup
+    source: "/home/rossg/Backups/important/*"
+    destination: "webdavs://backup-user:secure-pass@secure-webdav.example.com/backups"
+    sensitive: true
+
 # Inbound means files that should be retrieved from S3 to the local machine when we
 # receive an SQS notification that a new file has been deposited.
 inbound:
