Fix CI build failures: add security-events permission and non-blocking SARIF upload
- Add explicit permissions for security-events:write to enable SARIF upload
- Make SARIF upload continue-on-error to prevent blocking other jobs
- Resolves "Resource not accessible by integration" error in security scan job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
   release:
     types: [ published ]
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 env:
   GO_VERSION: '1.25.0'
 
@@ -99,6 +104,7 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: results.sarif
+      continue-on-error: true
       if: always()
 
   build:
