--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     types: [ published ]
 
 permissions:
-  contents: read
+  contents: write
   security-events: write
   actions: read
 
@@ -206,6 +206,7 @@ jobs:
     - name: Log in to Docker Hub
       if: github.event_name == 'release'
       uses: docker/login-action@v3
+      continue-on-error: true
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
